0 errors 0 warnings 0 notes
\o/

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,10 @@ Description: An updated version of GSIF::mpspline.
 License: GPL
 Encoding: UTF-8
 LazyData: true
+Imports:
+    aqp,
+    stats,
+    utils
 Suggests: 
     testthat
 RoxygenNote: 6.1.1
