--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: mpspline2
 Type: Package
 Title: Mass-preserving splines for soil data
-Version: 0.1.1
+Version: 0.1.2
+Date: 2019-02-17
 Authors@R: c(person("Lauren", "O'Brien", email = "obrlsoilau@gmail.com", role = c('aut', 'cre')),
              person("Brendan", "Malone",  email = "brendan.malone@csiro.au",  role = c('ctb')),
 			 person("Tomislav", "Hengl",  email = "tom.hengl@wur.nl",  role = c('ctb')),
