--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,6 @@ importFrom(aqp,horizonDepths)
 importFrom(aqp,horizons)
 importFrom(aqp,idname)
 importFrom(aqp,site)
+importFrom(stats,IQR)
 importFrom(stats,as.formula)
 importFrom(stats,sd)
