--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,6 @@
 export(mpspline)
 export(mpspline_compact)
 export(mpspline_one)
-export(mpspline_spc)
-importFrom(aqp,"depths<-")
-importFrom(aqp,"horizons<-")
-importFrom(aqp,horizonDepths)
-importFrom(aqp,horizons)
-importFrom(aqp,idname)
-importFrom(aqp,site)
+export(mpspline_tidy)
 importFrom(stats,IQR)
-importFrom(stats,as.formula)
 importFrom(stats,sd)
