--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,10 @@ Authors@R: c(person("Lauren", "O'Brien", email = "obrlsoilau@gmail.com", role = 
 			 person("Tom", "Bishop",  email = "t.bishop@usyd.edu.au",  role = c('ctb')),
 			 person("David", "Rossiter",  email = "david.rossiter@wur.nl",  role = c('ctb')),
 			 person("Dylan", "Beaudette",  email = "dylan.beaudette@ca.usda.gov",  role = c('ctb')))
-Description: A low-dependency implementation of GSIF::mpspline(). 
+Description: A low-dependency implementation of GSIF::mpspline() <https://r-forge.r-project.org/scm/viewvc.php/pkg/R/mpspline.R?view=markup&revision=240&root=gsif>,
+  which applies a mass-preserving spline to soil attributes. Splining soil data 
+  is a safe way to make continuous down-profile estimates of attributes measured
+  over discrete, often discontinuous depth intervals.
 License: GPL
 Encoding: UTF-8
 LazyData: true
