--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: R
 sudo: required
-r_packages: 
+env:
+  - _R_CHECK_SYSTEM_CLOCK_=0
+r_packages:
   # work around temporary travis + R 3.5 bug
   - devtools
   - covr
